initial html content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Danny Cruz Galindo</title>
+    </head>
+    <body>
+        <h1>Danny Cruz Galindo</h1>
+        <p>This web page is for CSCE 190</p>
+    </body>
+</html>
