--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Danny Cruz Galindo</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Danny Cruz Galindo</h1>
