--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
             <h2>Skills</h2>
         </div>
         <div class="projects">
+            <!-- Problem Statement Assignment -->
+            <section class="project">
+                <a href="files/statement.pdf">
+                    <h3>Problem Statement</h3>
+                </a>
+                <a href="files/statement.pdf">
+                    <img src="images/problem.png">
+                </a>
+                <p>The CSGO app that is used for the laundry room is almost never correct.</p>
+            </section>
             <h2>Highlighted projects</h2>
         </div>
         <div class="contact">
