--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <h3>Problem Statement</h3>
                 </a>
                 <a href="files/statement.pdf">
-                    <img src="images/problem.png">
+                    <img src="images/problem.png" alt="Problem Statement Image">
                 </a>
                 <p>The CSGO app that is used for the laundry room is almost never correct.</p>
             </section>
