--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <a href="files/statement.pdf">
                     <h3>Problem Statement</h3>
                 </a>
-                <a href="files/statement.pdf">
-                    <img src="images/statementimage.png" alt="Problem Statement Image">
+                <a href="files/Statement.pdf">
+                    <img src="images/statmentimage.png" alt="Problem Statement Image">
                 </a>
                 <p>The CSGO app that is used for the laundry room is almost never correct.</p>
             </section>
