--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="projects">
             <!-- Problem Statement Assignment -->
             <section class="project">
-                <a href="files/statement.pdf">
+                <a href="files/Statement.pdf">
                     <h3>Problem Statement</h3>
                 </a>
                 <a href="files/Statement.pdf">
