--- a/index.html
+++ b/index.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Danny Cruz Galindo</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Danny Cruz Galindo</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header>
         <h1>Danny Cruz Galindo</h1>
-        <div class="about">
-            <h2>About me</h2>
-            <p>This web page is for CSCE 190</p>
-        </div>
-        <div class="skills">
-            <h2>Skills</h2>
-        </div>
-        <div class="projects">
+        <p class="subtitle">Computer Science Student | Aspiring Software Developer</p>
+    </header>
+
+    <section class="about">
+        <h2>About Me</h2>
+        <p>Hi! I'm Danny Cruz Galindo, a passionate computer science student currently taking CSCE 190. 
+           I enjoy solving real-world problems through code and continuously improving my skills in software development and design.</p>
+    </section>
+
+    <section class="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>Java</li>
+            <li>HTML / CSS</li>
+            <li>Python</li>
+            <li>Git & GitHub</li>
+            <li>Problem Solving</li>
+        </ul>
+    </section>
             <!-- Problem Statement Assignment -->
             <section class="project">
                 <a href="files/Statement.pdf">
