about me change

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <body>
     <header>
         <h1>Danny Cruz Galindo</h1>
-        <p class="subtitle">Computer Science Student | Aspiring Software Developer</p>
+        <p class="subtitle">Computer Information System Student | Aspiring Cybersecurity Analyst</p>
     </header>
 
     <section class="about">
         <h2>About Me</h2>
-        <p>Hi! I'm Danny Cruz Galindo, a passionate computer science student currently taking CSCE 190. 
-           I enjoy solving real-world problems through code and continuously improving my skills in software development and design.</p>
+        <p>Hi! I'm Danny Cruz Galindo, a passionate computer information system student currently taking CSCE 190. 
+        </p>
     </section>
 
     <section class="skills">
@@ -22,7 +22,6 @@
         <ul>
             <li>Java</li>
             <li>HTML / CSS</li>
-            <li>Python</li>
             <li>Git & GitHub</li>
             <li>Problem Solving</li>
         </ul>
