--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <section class="about">
         <h2>About Me</h2>
-        <p>Hi! I'm Danny Cruz Galindo, a passionate computer information system student currently taking CSCE 190. 
+        <p>Hi! I'm Danny Cruz Galindo, a passionate computer information system student with a concentration in cybersecurity and currently taking CSCE 190. 
         </p>
     </section>
 
@@ -26,6 +26,8 @@
             <li>Problem Solving</li>
         </ul>
     </section>
+        <h2>Highlighted projects</h2>
+
             <!-- Problem Statement Assignment -->
             <section class="project">
                 <a href="files/Statement.pdf">
@@ -36,7 +38,14 @@
                 </a>
                 <p>The CSGO app that is used for the laundry room is almost never correct.</p>
             </section>
-            <h2>Highlighted projects</h2>
+            <!--Affinity Diagram Assignment -->
+            <section class="project">
+                <a href="files/Affinity Diagram.png">
+                    <h3>Affinity Diagram</h3></a>
+                <a href="files/ImageAffinityDiagram.png">
+                    <img src="images/ImageAffinityDiagram.png"></a>
+                <p>Text describing the diagram</p>
+            </section>
         </div>
         <div class="contact">
             <h2>Contact me</h2>
