updated affinity diagram

--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
             <!--Affinity Diagram Assignment -->
             <section class="project">
                 <a href="files/Affinity Diagram.png">
-                    <h3>Affinity Diagram</h3></a>
-                <a href="files/ImageAffinityDiagram.png">
-                    <img src="images/ImageAffinityDiagram.png"></a>
+                    <h3>Affinity Diagram</h3>
+                </a>
+                <a href="files/Affinity Diagram.png">
+                    <img src="images/ImageAffinityDiagram.png">
+                </a>
                 <p>Text describing the diagram</p>
             </section>
         </div>
