--- a/index.html
+++ b/index.html
@@ -46,7 +46,17 @@
                 <a href="files/Affinity Diagram.png">
                     <img src="images/ImageAffinityDiagram.png">
                 </a>
-                <p>Text describing the diagram</p>
+                <p>“The purpose of this diagram is to organize and analyze the apps usability issues so we can determine targeted solutions that will optimize performance and user satisfaction.”</p>
+            </section>
+            <!--Sketches Assignment-->
+            <section class="project">
+                <a href="files/Sketch.jpeg">
+                    <h3>Sketches</h3>
+                </a>
+                <a href="files/Sketch.jpeg">
+                    <img src="images/ImageSketch.png">
+                </a>
+                <p>This sketch illustrates potential improvements for the app, such as providing accurate washer and dryer availability and sending users notifications when their cycle is complete or nearing completion.</p>
             </section>
         </div>
         <div class="contact">
