--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <a href="files/Affinity Diagram.png">
                     <img src="images/ImageAffinityDiagram.png">
                 </a>
-                <p>“The purpose of this diagram is to organize and analyze the apps usability issues so we can determine targeted solutions that will optimize performance and user satisfaction.”</p>
+                <p>The purpose of this diagram is to organize and analyze the apps usability issues so we can determine targeted solutions that will optimize performance and user satisfaction.</p>
             </section>
             <!--Sketches Assignment-->
             <section class="project">
