--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li>Git & GitHub</li>
             <li>Problem Solving</li>
         </ul>
+        <p><a href="resume.html">View my full resume</a></p>
     </section>
         <h2>Highlighted projects</h2>
 
