--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <li>Git & GitHub</li>
             <li>Problem Solving</li>
         </ul>
+            My resume: <a href="files/Resume.pdf">PDF version</a>
+                | <a href="resume.html">HTML version</a>
+</span>
         <p><a href="resume.html">View my full resume</a></p>
     </section>
         <h2>Highlighted projects</h2>
