--- a/index.html
+++ b/index.html
@@ -42,20 +42,20 @@
             </section>
             <!--Affinity Diagram Assignment -->
             <section class="project">
-                <a href="files/Affinity Diagram.png">
+                <a href="files/Affinity Diagram.pdf">
                     <h3>Affinity Diagram</h3>
                 </a>
-                <a href="files/Affinity Diagram.png">
+                <a href="files/Affinity Diagram.pdf">
                     <img src="images/ImageAffinityDiagram.png">
                 </a>
                 <p>The purpose of this diagram is to organize and analyze the apps usability issues so we can determine targeted solutions that will optimize performance and user satisfaction.</p>
             </section>
             <!--Sketches Assignment-->
             <section class="project">
-                <a href="files/Sketch.jpeg">
+                <a href="files/Sketch2.pdf">
                     <h3>Sketches</h3>
                 </a>
-                <a href="files/Sketch.jpeg">
+                <a href="files/Sketch2.pdf">
                     <img src="images/ImageSketch.png">
                 </a>
                 <p>This sketch illustrates potential improvements for the app, such as providing accurate washer and dryer availability and sending users notifications when their cycle is complete or nearing completion.</p>
