--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@
                 </a>
                 <p>This sketch illustrates potential improvements for the app, such as providing accurate washer and dryer availability and sending users notifications when their cycle is complete or nearing completion.</p>
             </section>
+            <!--Repositories Assignment-->
+            <section class="project">
+                <a href="https://github.com/dannycruzga/JavaCodeJava">
+            <h3>Algorithmic Design Java Code</h3>
+                </a>
+                <a href="https://github.com/dannycruzga/JavaCodeJava">
+                    <img src="images/Java-Logo.png">
+                </a>
+                <p>This is a small Java code that I made to play rock paper scissors.</p>
+            </section>
         </div>
         <div class="contact">
             <h2>Contact me</h2>
