--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <h3>Algorithmic Design Java Code</h3>
                 </a>
                 <a href="https://github.com/dannycruzga/JavaCodeJava">
-                    <img src="images/Java-Logo.png">
+                    <img src="images/Java.png">
                 </a>
                 <p>This is a small Java code that I made to play rock paper scissors.</p>
             </section>
