style change again

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                 | <a href="resume.html">HTML version</a>
     </section>
         <h2>Highlighted projects</h2>
-
+         <!-- PROJECT GRID CONTAINER -->
+         <div class="projects-container">
             <!-- Problem Statement Assignment -->
             <section class="project">
                 <a href="files/Statement.pdf">
