hopefully it works

--- a/index.html
+++ b/index.html
@@ -71,10 +71,12 @@
                     <img src="images/ImageJava.jpg">
                 </a>
                 <p>This is a small Java code that I made to play rock paper scissors.</p>
-            </section>
-        </div>
-        <div class="contact">
-            <h2>Contact me</h2>
+         </section>
+
         </div> 
-    </body>
+
+        <div class="contact">
+             <h2>Contact Me</h2>
+        </div> 
+</body>
 </html>
