--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@
                 | <a href="resume.html">HTML version</a>
     </section>
         <h2>Highlighted projects</h2>
-         <!-- PROJECT GRID CONTAINER -->
-         <div class="projects-container">
             <!-- Problem Statement Assignment -->
             <section class="project">
                 <a href="files/Statement.pdf">
@@ -71,12 +69,10 @@
                     <img src="images/ImageJava.jpg">
                 </a>
                 <p>This is a small Java code that I made to play rock paper scissors.</p>
-         </section>
-
+            </section> 
         </div> 
-
-        <div class="contact">
-             <h2>Contact Me</h2>
+        <div class="contact"> 
+            <h2>Contact me</h2> 
         </div> 
-</body>
+    </body>
 </html>
