--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
             </section>
             <!--Sketches Assignment-->
             <section class="project">
-                <a href="files/Sketch2.pdf">
+                <a href="files/sketches_combined1.pdf">
                     <h3>Sketches</h3>
                 </a>
-                <a href="files/Sketch2.pdf">
+                <a href="files/sketches_combined1.pdf">
                     <img src="images/ImageSketch.png">
                 </a>
                 <p>This sketch illustrates potential improvements for the app, such as providing accurate washer and dryer availability and sending users notifications when their cycle is complete or nearing completion.</p>
