update html and style again

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                 <p>This is a small Java code that I made to play rock paper scissors.</p>
             </section> 
         </div> 
-        <div class="contact"> 
-            <h2>Contact me</h2> 
-        </div> 
-    </body>
+        <div class="contact section">
+            <h2>Contact Me</h2>
+        </div>
+</body>
 </html>
